# OpenCLOn12

./: .gitmodules  CMakeLists.txt  README.md  SUPPORT.MD
.github/workflows/: prbuild.yml
include/: Scheduler.hpp  XPlatHelpers.h  cache.hpp  compiler.hpp  context.hpp  device.hpp  formats.hpp  gl_tokens.hpp  kernel.hpp  platform.hpp  program.hpp  queue.hpp  resources.hpp  sampler.hpp  task.hpp
include/d3d12translationlayer/: Allocator.h  BlockAllocators.h  CommandListManager.hpp  D3D12TranslationLayerDependencyIncludes.h  D3D12TranslationLayerIncludes.h  DeviceChild.hpp  Fence.hpp  FormatDesc.hpp  ImmediateContext.hpp  ImmediateContext.inl  PipelineState.hpp  Query.hpp  Residency.h  Resource.hpp  ResourceBinding.hpp  ResourceCache.hpp  ResourceState.hpp  RootSignature.hpp  Sampler.hpp  Shader.hpp  Shader.inl  SubresourceHelpers.hpp  ThreadPool.hpp  Util.hpp  View.hpp  View.inl
src/: OpenCLOn12.def  Scheduler.cpp  cache.cpp  context.cpp  device.cpp  gl_tasks.cpp  kernel.cpp  kernel_tasks.cpp  main.cpp  platform.cpp  program.cpp  queue.cpp  resource_migrate.cpp  resource_tasks.cpp  resources.cpp  sampler.cpp  stubs.cpp  task.cpp
src/compilers/: compiler_common.cpp
src/compilers/v1/: clc_compiler.h  compiler_v1.cpp
src/compilers/v2/: clc_compiler.h  compiler_v2.cpp  dxil_versions.h
src/compilers/v2/clc/: clc.h
src/d3d12translationlayer/: Allocator.cpp  CommandListManager.cpp  DeviceChild.cpp  Fence.cpp  FormatDescImpl.cpp  ImmediateContext.cpp  PipelineState.cpp  Query.cpp  Residency.cpp  Resource.cpp  ResourceState.cpp  RootSignature.cpp  Sampler.cpp  SubresourceHelpers.cpp  Util.cpp  View.cpp
src/openclon12/: cache.cpp  cache.hpp  compiler.hpp  context.cpp  device.cpp  device.hpp  gl_tasks.cpp  kernel.cpp  kernel.hpp  kernel_tasks.cpp  platform.cpp  platform.hpp  program.cpp  program.hpp  resource_migrate.cpp  resource_tasks.cpp  resources.cpp  resources.hpp  sampler.cpp  sampler.hpp  scheduler.cpp  spookyv2.cpp  stubs.cpp  task.cpp  task.hpp
test/: CMakeLists.txt  cl2.hpp  openclon12test.cpp
